完善博客细节

--- a/themes/next-6.4.2/source/css/_custom/custom.styl
+++ b/themes/next-6.4.2/source/css/_custom/custom.styl
@@ -10,6 +10,9 @@
 // .post{
 //     margin-top:10px;
 // }
+.content-wrap{
+    margin-top:20px;
+}
 // .post-block{
 //     background:  rgba(255,255,255,0.95);
 // }
