--- a/themes/next-6.4.2/source/css/_custom/custom.styl
+++ b/themes/next-6.4.2/source/css/_custom/custom.styl
@@ -1,24 +1,30 @@
 // Custom styles.
-// body { 
-//     //margin-top:10px;
+body { 
+    //margin-top:10px;
     
-//     background-image:url("/images/bg.jpg");
-//     background-size:cover;
-//     background-repeat: no-repeat;
-//     background-attachment:fixed;
-// } 
+    background-image:url("/images/bg2.jpg");
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-attachment:fixed;
+} 
 // .post{
 //     margin-top:10px;
 // }
+.header-inner{
+     background:  rgba(255,255,255,0.9);
+}
+.headband{
+    background: rgba(255,255,255,0);
+}
 .content-wrap{
     margin-top:20px;
 }
-// .post-block{
-//     background:  rgba(255,255,255,0.95);
-// }
-// .sidebar{
-//     background:  rgba(255,255,255,0.9);
-// }
-// .sidebar-inner{
-//     background:  rgba(255,255,255,0);
-// }
+.post-block{
+    background:  rgba(255,255,255,0.8);
+}
+.sidebar{
+    background:  rgba(255,255,255,0.9);
+}
+.sidebar-inner{
+    background:  rgba(255,255,255,0);
+}
