--- a/themes/next-6.4.2/source/css/_custom/custom.styl
+++ b/themes/next-6.4.2/source/css/_custom/custom.styl
@@ -14,7 +14,10 @@ body {
      background:  rgba(255,255,255,0.9);
 }
 .headband{
-    background: rgba(255,255,255,0);
+    max-height:0;
+    min-height:0;
+    height:0;
+    //background: rgba(255,255,255,0);
 }
 .content-wrap{
     margin-top:20px;
