妈的反向优化

--- a/themes/next-6.7.0/source/css/_custom/custom.styl
+++ b/themes/next-6.7.0/source/css/_custom/custom.styl
@@ -2,14 +2,14 @@
 ::-webkit-scrollbar{
     display:none;
 }
-// body { 
-//     //margin-top:10px;
+body { 
+    //margin-top:10px;
     
-//     background-image:url("/images/bg2.jpg");
-//     background-size:cover;
-//     background-repeat: no-repeat;
-//     background-attachment:fixed;
-// } 
+    background-image:url("/images/bg2.jpg");
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-attachment:fixed;
+} 
 // .post{
 //     margin-top:10px;
 // }
@@ -22,13 +22,13 @@
     height:0;
     //background: rgba(255,255,255,0);
 }
-footer{
-    background-color: rgba(0,0,0,0);
-}
-// .content-wrap{
-//     // margin-top:20px;
-//     background: rgba(0,0,0,0);
+// footer{
+//     background-color: rgba(0,0,0,0);
 // }
+.content-wrap{
+    // margin-top:20px;
+    background: rgba(0,0,0,0);
+}
 // #content{
 //     margin: 0px;
 // }
@@ -36,13 +36,16 @@ footer{
 //     margin: 0px;    
 // }
 // .post{
-//     // background: red;
+//     background: white;
 //     margin: 0px;
 // }
-// .post-block{
-//     // margin-bottom: 20px;
-//     background:  rgba(255,255,255,1);
-// }
+.post-block{
+    // margin-bottom: 20px;
+    background:  rgba(255,255,255,1);
+}
+.post-header{
+    margin-top: 15px;
+    }
 // footer{
 //     background-color : rgb(255,255,255);
 //     color: black;
