恢复默认样式

--- a/themes/next-6.7.0/source/css/_custom/custom.styl
+++ b/themes/next-6.7.0/source/css/_custom/custom.styl
@@ -25,27 +25,27 @@ body {
 // footer{
 //     background-color: rgba(0,0,0,0);
 // }
-.content-wrap{
-    // margin-top:20px;
-    background: rgba(0,0,0,0);
-}
-// #content{
-//     margin: 0px;
+// .content-wrap{
+//     // margin-top:20px;
+//     background: rgba(0,0,0,0);
 // }
-// #posts{
-//     margin: 0px;    
+// // #content{
+// //     margin: 0px;
+// // }
+// // #posts{
+// //     margin: 0px;    
+// // }
+// // .post{
+// //     background: white;
+// //     margin: 0px;
+// // }
+// .post-block{
+//     // margin-bottom: 20px;
+//     background:  rgba(255,255,255,1);
 // }
-// .post{
-//     background: white;
-//     margin: 0px;
-// }
-.post-block{
-    // margin-bottom: 20px;
-    background:  rgba(255,255,255,1);
-}
-.post-header{
-    margin-top: 15px;
-    }
+// .post-header{
+//     margin-top: 15px;
+//     }
 // footer{
 //     background-color : rgb(255,255,255);
 //     color: black;
