--- a/themes/next-7.3.0/source/css/main.styl
+++ b/themes/next-7.3.0/source/css/main.styl
@@ -43,3 +43,5 @@ for $inject_mixin in hexo-config('injects.mixin')
 // --------------------------------------------------
 for $inject_style in hexo-config('injects.style')
   @import "../../../../" + $inject_style;
+
+@import "./custom.styl";
