日常维护与更新

--- a/themes/next-7.3.0/source/css/custom.styl
+++ b/themes/next-7.3.0/source/css/custom.styl
@@ -1,7 +1,7 @@
-$font = 'KaiTi';
-.post-title{
-    font-family: $font;
-}
-.post-body{
-    font-family: $font;
-}
+// $font = 'KaiTi';
+// .post-title{
+//     font-family: $font;
+// }
+// .post-body{
+//     font-family: $font;
+// }
