--- a/themes/next-7.3.0/source/css/custom.styl
+++ b/themes/next-7.3.0/source/css/custom.styl
@@ -5,3 +5,9 @@
 // .post-body{
 //     font-family: $font;
 // }
+body{
+    background-image: url(/images/bgt.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
