--- a/themes/next-7.3.0/source/css/custom.styl
+++ b/themes/next-7.3.0/source/css/custom.styl
@@ -6,7 +6,8 @@
 //     font-family: $font;
 // }
 body{
-    background-image: url(/images/bgt.jpg);
+    // background-image: url(/images/bgt.jpg);
+    background-color: whitesmoke;
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
